2010-06-04  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Dirk Schulze.

        Canvas createPattern(img, repetition) shouldn't throw INVALID_STATE_ERR when !img.complete
        https://bugs.webkit.org/show_bug.cgi?id=40166

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-context-2d-createpattern

        * http/tests/misc/canvas-pattern-from-incremental-image-expected.txt: Updated baseline.
        * http/tests/misc/canvas-pattern-from-incremental-image.html: Fleshed out test.
2010-06-04  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Dirk Schulze.

        Canvas createPattern(img, repetition) shouldn't throw INVALID_STATE_ERR when !img.complete
        https://bugs.webkit.org/show_bug.cgi?id=40166

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#dom-context-2d-createpattern

        Test: http/tests/misc/canvas-pattern-from-incremental-image.html (updated)

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::createPattern):

Canonical link: https://commits.webkit.org/51754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60731 268f45cc-cd09-0410-ab3c-d52691b4dbfc